n8n_with_ingress_gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - name: http
      port: 80
      targetPort: 5678
