n8n_with_ingress_gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-route
  namespace: apps
spec:
  hostnames:
    - ldap-dev01.in.pi-lar.net
  parentRefs:
    - name: nginx-gateway 
      namespace: ingress-nginx
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n
          namespace: apps
          port: 80
